adding swagger REST API docs

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>BABABABABABANANA! </h1>
+    <h1>Welcome to Ticker Service! </h1>
+    <p>For REST API definition please take look <a href="swagger/index.html">here</a></p>
 </body>
 </html>
