--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Something went wrong! </h1>
-<h2>Our Engineers are on it</h2>
-<a href="/">Go Home</a>
+<header>
+    <h1>Something went wrong! </h1>
+    <a href="/">Go Home</a>
+</header>
 </body>
 </html>
